# forgemaster

./: .dockerignore  .gitignore  AGENT-CONTEXT.md  CLAUDE.md  FORGEMASTER-Planning-Document-v3.md  FORGEMASTER-TASK-LIST.md  LESSONS-LEARNED.md  README.md  TASK-STATUS.md  alembic.ini  forgemaster.toml.example  pyproject.toml
.github/workflows/: ci.yml
agent-templates/: architect.j2  base.j2  interviewer.j2  planner.j2  reviewer-accessibility.j2  reviewer-backend.j2  reviewer-database.j2  reviewer-dependency.j2  reviewer-docker.j2  reviewer-docs.j2  reviewer-errors.j2  reviewer-frontend.j2  reviewer-integration.j2  reviewer-scm.j2  reviewer-security.j2  reviewer-spec.j2
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_indexes.py  003_file_locks.py
context-templates/: architecture.j2  standards.j2
docker/: .env.example  Dockerfile  ROOTLESS.md  docker-compose.dev.yml  docker-compose.yml
docker/init/: 01-extensions.sql  README.md
docs/: nginx-automation.md  secrets-injection.md
scripts/: dns-hostinger.sh  nginx-proxy-add.sh  nginx-proxy-modify.sh  nginx-proxy-remove.sh
scripts/hooks/: inject-secrets.sh
src/forgemaster/: __init__.py  config.py  health.py  logging.py  main.py
systemd/: forgemaster.service
tests/: __init__.py
tests/e2e/: __init__.py  conftest.py  test_docker_deployment.py  test_parallel_execution.py  test_resilience.py  test_review_cycle.py  test_task_lifecycle.py
tests/integration/: __init__.py  conftest.py  test_api_lessons.py  test_api_projects.py  test_api_sessions.py  test_api_tasks.py  test_architect.py  test_cli.py  test_container.py  test_crash_recovery.py  test_docker_build.py  test_git_ops.py  test_handover.py  test_health_check.py  test_interviewer.py  test_lesson_queries.py  (+12 more)
(+117 files in other folders)
